--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>slungus</title>
+    <title>Epic Website</title>
     <link rel = "icon" type = "image" href = "https://google.com"/>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width"/>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-      <h1>slungus</h1>
+    <div id="container" class="container">
+      <button id="home" class="cbtn">Home</button>
+      <button id="games" class="cbtn">Games</button>
+    </div>
+    <h1 style="text-align: center;">Epic Website</h1>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
