--- a/ghost/site/gswebsite.html
+++ b/ghost/site/gswebsite.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GhostScript Website</title>
-    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="gswebsite.css">
 </head>
 <body>
-    <h1>GhostScript</h1>
-    <div class="space"></div>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="gswebsite.js" type="module"></script>
 </body>
 </html>
