--- a/ghost/site/gswebsite.community.html
+++ b/ghost/site/gswebsite.community.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GhostScript Website</title>
+    <title>GhostScript Website - GhostScript API</title>
     <link rel="stylesheet" href="gswebsite.css">
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="gswebsite.defcont.js" type="module"></script>
-    <script src="gswebsite.js" type="module"></script>
+    <script src="gswebsite.gs.js" type="module"></script>
 </body>
 </html>
