Fixed artifacts that refd wrong js script

--- a/ghost/site/gswebsite.community.html
+++ b/ghost/site/gswebsite.community.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <script src="gswebsite.defcont.js" type="module"></script>
-    <script src="gswebsite.gs.js" type="module"></script>
+    <script src="gswebsite.community.js" type="module"></script>
 </body>
 </html>
