--- a/ghost/site/gswebsite.dl.html
+++ b/ghost/site/gswebsite.dl.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <script src="gswebsite.defcont.js" type="module"></script>
-    <script src="gswebsite.gs.js" type="module"></script>
+    <script src="gswebsite.dl.js" type="module"></script>
 </body>
 </html>
