--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <script src="pagedefault.js"></script>
-    <h1 style="text-align: center;">Epic Website</h1>
+    <h1 class="title" id="title">Epic Website</h1>
     <script src="main.js" type="module"></script>
   </body>
 </html>
