Fixed some problems

--- a/ghost/site/gswebsite.dl.html
+++ b/ghost/site/gswebsite.dl.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <script src="gswebsite.defcont.js" type="module"></script>
+    <h1>Download GhostScript</h1>
     <script src="gswebsite.dl.js" type="module"></script>
 </body>
 </html>
