--- a/games.html
+++ b/games.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <script src="pagedefault.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@beanthealien/phantomjs@1.0.0/phantom.min.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@beanthealien/phantomjs@1.0.0/phantom2d.min.js" type="module"></script>
     <script src="games.js" type="module"></script>
   </body>
 </html>
