--- a/rpg.html
+++ b/rpg.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <script src="pagedefault.js"></script>
-    <script src="lotto.js" type="module"></script>
+    <script src="rpg.js" type="module"></script>
   </body>
 </html>
