--- a/rpg.html
+++ b/rpg.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width"/>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="rpg.css">
   </head>
   <body>
-    <script src="pagedefault.js"></script>
     <script src="rpg.js" type="module"></script>
   </body>
 </html>
